# mma-wls-server-api

./: .env.example  AGENTS.md  LLM.md  README.md  llm.txt  pyproject.toml  test_sync.py  wls_sync.py
app/: __init__.py  cli.py  main.py
examples/: matex-demo-README.md  matex-demo.wls
examples/sync-demo/: README.md  main.wls
examples/sync-demo/data/: input.txt
tests/: test_app.py
